[gd_scene load_steps=11 format=3 uid="uid://d30mq788le0nt"]

[ext_resource type="Script" uid="uid://dpv7hrojpq63x" path="res://script/onboarding.gd" id="1_iat7d"]
[ext_resource type="Theme" uid="uid://cdynjfvdtavlt" path="res://scene/main_menu/main_menu_button_theme.tres" id="2_etyvi"]
[ext_resource type="FontFile" uid="uid://dklcxnp1ecpee" path="res://font/Inter/static/Inter_28pt-Medium.ttf" id="8_vemtp"]
[ext_resource type="PackedScene" uid="uid://bgnvqj8xi6u7e" path="res://scene/volumn.tscn" id="9_volume"]
[ext_resource type="AudioStream" uid="uid://ci4xowhem06dc" path="res://audio/radar-beeping.mp3" id="10_audio"]
[ext_resource type="FontFile" uid="uid://bt41csp00hdy7" path="res://font/Inter/Inter-VariableFont_opsz,wght.ttf" id="11_inter"]
[ext_resource type="AudioStream" uid="uid://cgkib15mat3f6" path="res://audio/Cursor.ogg" id="12_cursor"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ogpcl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iat7d"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rtuh2"]

[node name="onboarding" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iat7d")

[node name="back" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="background" type="ColorRect" parent="back"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.03137255, 0.03137255, 0.03137255, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NormalState" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme = ExtResource("2_etyvi")
alignment = 1

[node name="QRContainer" type="PanelContainer" parent="CenterContainer/NormalState"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_ogpcl")

[node name="QRTextureRect" type="TextureRect" parent="CenterContainer/NormalState/QRContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="space" type="Panel" parent="CenterContainer/NormalState"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_iat7d")

[node name="GreetingContainer" type="PanelContainer" parent="CenterContainer/NormalState"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2

[node name="GreetingLabel" type="RichTextLabel" parent="CenterContainer/NormalState/GreetingContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("8_vemtp")
theme_override_font_sizes/normal_font_size = 28
bbcode_enabled = true
text = "\"Hello, my name is [color=orange]...[/color], As this is the first time we met, please scan the QR code to download a mobile APP to control me and explore what I can do for you.\""
fit_content = true
visible_characters = 0
visible_ratio = 0.0

[node name="ErroContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 60.0
offset_top = 1160.0
offset_right = 660.0
offset_bottom = 1240.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_rtuh2")

[node name="ErrorLabel" type="RichTextLabel" parent="ErroContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(1, 0.647059, 0, 1)
theme_override_fonts/normal_font = ExtResource("8_vemtp")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "HEALTH CHECK IN PROGRESS ..."
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="Copywrite" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
theme_override_fonts/font = ExtResource("11_inter")
horizontal_alignment = 1
vertical_alignment = 2

[node name="VolumeControl" parent="." instance=ExtResource("9_volume")]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -420.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_audio")
autoplay = true

[node name="TypewriterSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_cursor")
